@@ -98,5 +98,7 @@ REL1_10_6:
 - Integrated 'ParserFunctions'
 - Integrated 'StringFunctions'
 - ParserPhase2: added 'foreachx','forx' ,'gset' and 'gget' functions
+- ParserPhase2: added 'hook' function for adding 'keywords' based functions (similar to 'parser functions')
 - Added 'ForeachFunctions' extension
--
+- Adjusted 'Log/rights' browse right for '*' group
+- Adjusted 'Log/move' browse right for '*' group
